--- a/Frontend/wqi-frontend/package.json
+++ b/Frontend/wqi-frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-select-search": "^3.0.9",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
